refactor: review 2.7, extract field validator and shared form-action utilities (#87)
* fix: review 1.5-6-7-8-9
Harden form submission flow: improve MIME and escaping behavior, enforce submit security checks, and document CSRF and trust boundaries

* Create D4qQiD53.md

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Refine changelog entry wording for PR feedback

* fix: commons-io version update
add unit for verifyAuthentication and verifyCaptcha

* fix: review_1.10-11-12-13-14
Harden form submission flow: sanitize forwarded field names, clarify chunked size enforcement, remove stored PII, and fail closed on JCR metadata/action errors

* fix: build failed due to test

* fix: review 2.1-2 remove null RenderContext and pass submitted files explicitly

Drop the unused RenderContext argument from FormAction.execute and pass
validated uploads as List<SubmittedFile> instead of reading them from
HttpServletRequest attributes. Update actions, tests, and docs
accordingly.

Merge custom form action doc with how to create form action

* fix: review 2.5 FieldMetadata would be cleaner as a single map

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

* update lessons-learned.md to clarify

* refactor: drop ${revision} and remove flatten-maven-plugin (#85)

Use explicit 0.2.0-SNAPSHOT versions in the root, module, and test-module
POMs, and remove the root flatten-maven-plugin now that CI-friendly version
placeholders are no longer used.

* refactor: clarify CND ownership and engine form semantics

Move engine-owned logic CND definitions out of form